# emails

./: MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
emails/: api.py  hooks.py  patches.txt
emails/config/: desktop.py
emails/email_service/: email_override.py  generic_email.py  invoice_email.py  payment_request_email.py  quotation_email.py  resend_client.py  sales_order_email.py  utils.py  webhooks.py
emails/emails/doctype/email_doctype_configuration/: email_doctype_configuration.json  email_doctype_configuration.py
emails/emails/doctype/email_service_settings/: email_service_settings.js  email_service_settings.json  email_service_settings.py
emails/patches/: __init__.py  migrate_to_doctype_configuration.py
emails/public/js/: send_email_button.js
