[project]
name = "emails"
version = "0.0.1"
description = "Professional branded emails via Resend for invoices, quotations, receipts, and other documents"
authors = [
    {name = "Alumicraft", email = "your@email.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.html", "*.css", "*.js"]
